pypet 0.1b.13

*   ENH: Pypet can now apply fast merging if trajectories reside in different files.
    If one still wants to apply slow merging, one can set `slow_merge=True`.

*   ENH: New `merge_all_in_folder` function

*   ENH: One can now add groups on the fly via `traj['new_group.on.the.fly'] = 42`
    in case lazy adding is turned on.

pypet 0.1b.12

*   Renaming of the MultiprocContext's `start` function to `f_start`

*   BUG FIX: Correct lock acquiring for multiprocessing with StorageContextManager

*   BUG FIX: `v_full_copy` is now `False` by default

*   BUG FIX: `v_full_copy` is no longer automatically set to `True` when using
    `freeze_pool_input`.

*   New `consecutive_merge` parameter for `f_merge` to allow faster merging of several
    trajectories.

*   New `f_merge_many` function to merge many trajectories at once.

*   New experimental ``'PIPE'`` wrapping which is even faster (but more unreliable)
    than ``'QUEUE'``.


pypet 0.1b.11

*   If one wants the old logging method, `log_config` should not be specified, i.e.
    setting it to `None` is no longer sufficient`

*   BUG FIX: Connection loss between the queue manager and the pool/processes has been resolved.
    This caused a minor slowing down of multiprocessing using a queue.

*   New ``freeze_pool_input`` functionality for faster starting of single runs if using
    a pool.


pypet 0.1b.10

*   New `v_crun_` property simply returning ``'run_ALL'`` if ``v_crun`` is ``None``.

*   BUG FIX: Removed recursive evaluation due to usage of `itertools.chain` during
    recursive node traversal

*   max_depth is now also supported by `f_store`, `f_store_child`, `f_load`, `f_load_child`

*   Loading and Storing internally are no longer truly recursive but iteratively handled.

*   New `v_auto_run_prepend` property of the trajectory to switch off auto run name prepending if
    desired.

*   The trajectory no longer relies on evil `eval` to construct a class. Instead