@@ -8,6 +8,10 @@ pypet 0.1b.13
 *   ENH: One can now add groups on the fly via `traj['new_group.on.the.fly'] = 42`
     in case lazy adding is turned on.
 
+*   The range is now a list that is by default copied upon request. To avoid
+    quadratic complexity with multiple calls to `f_expand`.
+
+
 pypet 0.1b.12
 
 *   Renaming of the MultiprocContext's `start` function to `f_start`
